# stigma-agent

./: .gitignore  README.md
.github/actions/assert-no-secrets/: action.yml
.github/workflows/: backend.yml  frontend.yml
backend/: .env.example  ARCHITECTURE.md  CLAUDE.md  README.md  docker-compose.yml  eslint.config.mjs  package.json  pnpm-lock.yaml
backend/docs/: TASK.md
backend/prisma/: schema.prisma
backend/prisma/migrations/20260701111726_init/: migration.sql
backend/scripts/: validate-invest.ts  validate-writes.ts
backend/src/: all-exceptions.filter.ts  app.boot.spec.ts  app.module.spec.ts  app.module.ts  main.ts
backend/src/agent/: agent.parse.spec.ts  agent.parse.ts  agent.service.spec.ts  agent.service.ts
backend/src/auth/: wallet-auth.guard.spec.ts  wallet-auth.guard.ts
backend/src/billing/: billing.service.ts
backend/src/chain/: casper.config.ts  chain.controller.ts  chain.live.spec.ts  chain.read.spec.ts  chain.service.spec.ts  chain.service.ts  chain.write.spec.ts  glide.spec.ts  glide.ts  odra.codec.spec.ts  odra.codec.ts
backend/src/config/: constants.ts  money.spec.ts  money.ts
backend/src/keeper/: keeper.controller.ts  keeper.module.ts  keeper.service.spec.ts  keeper.service.ts
backend/src/keeper/dto/: faucet.dto.ts  oracle-override.dto.ts
backend/src/onboarding/: onboarding.controller.ts  onboarding.module.ts  onboarding.service.ts  questionnaire.spec.ts  questionnaire.ts
backend/src/onboarding/dto/: submit-onboarding.dto.ts
backend/src/portfolio/: chat.controller.ts  chat.service.spec.ts  chat.service.ts  portfolio.controller.ts  portfolio.module.ts  portfolio.service.spec.ts  portfolio.service.ts  portfolio.types.ts
backend/src/pricing/: pricing.service.spec.ts  pricing.service.ts
backend/src/prisma/: prisma.service.ts
contract/: .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  Odra.toml  README.md
contract/docs/: TASK.md
contract/scripts/: deploy.sh
contract/src/: constants.rs  lib.rs  oracle.rs  registry.rs  router.rs  tests.rs  token.rs  vault.rs
docs/decisions/: 0001-vault-creation-path.md
frontend/: .env.example  ARCHITECTURE.md  CLAUDE.md  README.md  next.config.ts  package.json  pnpm-lock.yaml  vitest.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/app/(onboarding)/: layout.tsx
frontend/app/dashboard/: page.tsx
frontend/app/faucet/: page.tsx
frontend/components/: ActivityList.tsx  AgentChat.tsx  AgentInvestOverlay.tsx  AllocationChart.tsx  AztecBackground.tsx  ContributionCard.tsx  DemoPanel.tsx  DepositForm.tsx  FaucetPanel.tsx  GoalProgress.tsx  PortfolioCard.tsx  ProfileBadge.tsx  QuestionnaireForm.tsx  Reveal.tsx  TxLink.tsx  UpdateConfigForm.tsx  WalletButton.tsx  WithdrawForm.tsx  landing.tsx  ornaments.tsx
frontend/docs/: TASK.md
frontend/hooks/: use-portfolios.ts  use-signed-action.ts  use-wallet.ts
frontend/lib/: api.ts  casper-wallet.d.ts  casper.ts  constants.ts  format.test.ts  format.ts  types.ts
frontend/public/: Vault.wasm
(+6 files in other folders)
