[package]
edition = "2021"
name = "stigma_contracts"
version = "0.1.0"

[features]
# Enables the off-chain livenet deploy runner (bin/livenet_deploy.rs). Not part
# of the contract WASM — only used to deploy to a Casper node.
livenet = ["odra-casper-livenet-env"]

[dependencies]
odra = { version = "2.8.2", features = [], default-features = false }
odra-modules = { version = "2.8.2", features = [], default-features = false }

[dev-dependencies]
odra-test = { version = "2.8.2", features = [], default-features = false }

[build-dependencies]
odra-build = { version = "2.8.2", features = [], default-features = false }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
odra-build = { version = "2.8.2", features = [], default-features = false }
odra-casper-livenet-env = { version = "2.8.2", optional = true }

[[bin]]
name = "stigma_contracts_build_contract"
path = "bin/build_contract.rs"
test = false

[[bin]]
name = "stigma_contracts_build_schema"
path = "bin/build_schema.rs"
test = false

[[bin]]
name = "livenet_deploy"
path = "bin/livenet_deploy.rs"
required-features = ["livenet"]
test = false

[profile.release]
codegen-units = 1
lto = true

[profile.dev.package."*"]
opt-level = 3
