[package]
edition = "2021"
name = "stigma_contracts"
version = "0.1.0"

[dependencies]
odra = { version = "2.8.2", features = [], default-features = false }
odra-modules = { version = "2.8.2", features = [], default-features = false }
# Host-only deps for the per-vault deploy runner (bin/deploy_vault.rs). Optional +
# feature-gated so `cargo odra build` (wasm) and `cargo odra test` never pull
# them; enable explicitly with `--features livenet`. serde_json lets the runner
# read infra hashes straight from `deployed.casper-test.json` (no env duplication).
odra-casper-livenet-env = { version = "2.8.2", optional = true }
serde_json = { version = "1", optional = true }

[features]
# Turns on the host-side livenet deploy runner. Off by default.
livenet = ["dep:odra-casper-livenet-env", "dep:serde_json"]

[dev-dependencies]
odra-test = { version = "2.8.2", features = [], default-features = false }

[build-dependencies]
odra-build = { version = "2.8.2", features = [], default-features = false }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
odra-build = { version = "2.8.2", features = [], default-features = false }

[[bin]]
name = "stigma_contracts_build_contract"
path = "bin/build_contract.rs"
test = false

[[bin]]
name = "stigma_contracts_build_schema"
path = "bin/build_schema.rs"
test = false

# Per-vault livenet deploy runner (host-only; needs a funded testnet key).
# Built only with `--features livenet`, so it is invisible to the wasm build.
[[bin]]
name = "deploy_vault"
path = "bin/deploy_vault.rs"
required-features = ["livenet"]
test = false

[profile.release]
codegen-units = 1
lto = true

[profile.dev.package."*"]
opt-level = 3
